Fix projects alignment issue when resizing

--- a/style.css
+++ b/style.css
@@ -141,22 +141,25 @@ body {
 .trending,
 .announcements {
     display: grid;
-    column-gap: 10px;
     row-gap: 10px;
 }
 
+.projects {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr;
+    grid-row: 1 / 3;
+}
 .mc-title {
     font-size: 18px;
     font-weight: 600;
     margin-top: 20px;
 }
 
-.projects {
+.p-container {
+    display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto repeat(3, 200px);
     column-gap: 10px;
     row-gap: 10px;
-    grid-row: 1/3;
     margin-left: 15px;
 }
 
